--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
        <h1>Dasmoto's Arts & Crafts</h1>
      </header>
 
-    <h3 class="brushes">Brushes</h3> 
+    <h2 class="brushes">Brushes</h2> 
     <img id="brushes" src="resources/images/hacksaw.jpeg" alt="brushes">
-     <h4> Hacksaw Brushes</h4>
-      <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <a style=color:blue><strong>Starting at $3.00 / brush</strong></a> </p>
+     <h3> Hacksaw Brushes</h3>
+      <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span style=color:blue><strong>Starting at $3.00 / brush</strong></span> </p>
 
-    <h3 class="frames">Frames</h3>
+    <h2 class="frames">Frames</h2>
     <img id="frames" src="resources/images/frames.jpeg" alt="frames">
-     <h4>Art Frames (assorted)</h4>
-      <p> Assorted frames made of different material, including MDR, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <a style=color:blue><strong> Starting at $2.00 / frame </strong></a></p>
+     <h3>Art Frames (assorted)</h3>
+      <p> Assorted frames made of different material, including MDR, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span style=color:blue><strong> Starting at $2.00 / frame </strong></span></p>
 
-    <h3 class="paint">Paint</h3>
+    <h2 class="paint">Paint</h2>
     <img id="paint" src="resources/images/finnish.jpeg" alt="paint">
-     <h4>Clean Finnish Paint</h4>
-      <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <a style=color:blue><strong>Starting at $5.00 / tube</strong></a></p>
+     <h3>Clean Finnish Paint</h3>
+      <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span style=color:blue><strong>Starting at $5.00 / tube</strong></span></p>
   </body>
    
 </html>
